# mezzanine-organization

./: .bowerrc  .editorconfig  .flake8  .gitignore  .gitmodules  CHANGELOG.md  Dockerfile  Gemfile  Pipfile  README.rst  backends.py  bower.json  conf.json  debian-requirements.txt  docker-compose.yml  gulpfile.js  init.sh.example  install.py  install_linux_systemd.py  install_sysv.py  local_settings.py  manage.py  package.json  q:q  requirements-dev.txt  requirements.txt  routers.py  settings.py  setup.cfg  setup.py  sitemaps.py  translations.py  urls.py  wait.py  wsgi.py
.github/workflows/: lint.yml
app/: local_settings.py  manage.py  settings.py  translations.py  urls.py  wait.py  wsgi.py
app/custom/: admin.py  models.py  translations.py
app/deploy/: install_linux_systemd.py  my.cnf  start_app-dev.sh  start_app.sh
app/festival/: admin.py  models.py  urls.py  views.py
app/magazine/: apps.py  models.py  translations.py
app/manifeste/: local_settings.py
app/organization/: __init__.py  models.py  urls.py
app/sandbox/: local_settings.py  middleware.py  settings.py  urls.py
app/scripts/: app.sh
app/templates/: base.html  index.html  search_results.html  styles.html
conf/: dev.yml  eve.yml  lib.yml
custom/: admin.py  models.py  translations.py
custom/migrations/: 0001_initial.py  0003_auto_20160705_1702.py  0005_auto_20160706_1803.py  0007_auto_20160706_1841.py  0008_auto_20160707_1047.py
deploy/: install_linux.py  install_linux_sysvinit.py  start_app.sh
doc/: Makefile  build.sh
doc/src/: architecture.rst  conf.py  copyright.rst  development.rst  index.rst  install.rst  license.rst  maintenance.rst  overview.rst
env/: dev.yml  eve.yml  prestashop.yml
etc/: nginx.conf  sources.list
etc/apt/: sources.list
festival/: admin.py  models.py  routers.py  urls.py  views.py
festival/migrations/: 0001_initial.py  0002_auto_20160201_2339.py  0002_auto_20160224_1243.py  0002_auto_20160225_1602.py  0003_auto_20160224_1835.py  0003_auto_20160229_1430.py  0004_auto_20160229_1630.py  0005_auto_20160202_0006.py  0005_auto_20160225_0500.py  0005_auto_20160229_1636.py  0006_auto_20160225_0503.py  0006_auto_20160303_1442.py  0007_auto_20160309_1441.py  0008_auto_20160225_1218.py  0011_auto_20160323_1159.py  0012_auto_20160405_2351.py  0014_auto_20160407_1433.py  0015_auto_20160407_2249.py  0020_auto_20160421_1059.py  0021_delete_pagecategory.py
festival/templatetags/: festival_tags.py
magazine/: models.py
magazine/migrations/: 0001_initial.py  0003_auto_20160706_1810.py  0005_auto_20160706_1831.py  0007_auto_20160706_1841.py  0008_auto_20160706_1852.py  0011_auto_20160707_1125.py
manifeste/: local_settings.py  settings.py  urls.py
migrations/conf/: 0002_auto_20151223_1313.py
migrations/forms/: 0001_initial.py  0005_auto_20151223_1313.py
migrations/galleries/: 0001_initial.py
migrations/mezzanine_agenda/: 0001_initial.py  0002_auto_20160224_1142.py  0003_auto_20160309_1621.py  0004_auto_20160331_1832.py  0007_auto_20160410_2148.py  0008_auto_20160410_2149.py  0009_auto_20160410_2154.py  0011_auto_20160410_2330.py  0012_auto_20160410_2336.py  0013_auto_20160510_1542.py  0014_event_brochure.py
migrations/shop/: 0010_remove_product_content_model.py  0011_product_content_model.py
organization/: __init__.py  cache.py  models.py  settings.py  urls.py
organization/agenda/: __init__.py  admin.py  apps.py  forms.py  models.py  tests.py  translation.py  urls.py  views.py
organization/core/: __init__.py  admin.py  api.py  apps.py  backend.py  context_processors.py  decorators.py  defaults.py  fields.py  forms.py  managers.py  middleware.py  models.py  no_db_settings.py  related.py  serializers.py  tests.py  translation.py  urls.py  utils.py  views.py
organization/custom/: admin.py  models.py
organization/featured/: admin.py  apps.py  views.py
organization/festival/: __init__.py  admin.py  apps.py  models.py  related.py  translation.py  urls.py  views.py
organization/formats/: __init__.py  apps.py  formats.py
organization/ircam_oauth2_provider/: provider.py  urls.py  utils.py  views.py
organization/job/: __init__.py  admin.py  apps.py  forms.py  models.py  translation.py  urls.py  views.py
organization/magazine/: __init__.py  admin.py  apps.py  forms.py  models.py  translation.py  urls.py  views.py
organization/media/: __init__.py  admin.py  apps.py  forms.py  models.py  translation.py  urls.py  views.py
organization/migrations/: 0001_initial.py
organization/network/: __init__.py  admin.py  api.py  apps.py  forms.py  models.py  serializers.py  tests.py  translation.py  urls.py  utils.py  validators.py  views.py
organization/pages/: __init__.py  (+10 more)
project/: models.py
sandbox/: local_settings.py  settings.py  urls.py
scripts/: app.sh  backup.sh  backup_db.sh  backup_db_mysql.sh  collectstatic.sh  fs_migrate.sh  makemigrations.sh  migrate.sh  pull.sh  push.sh  restore.sh  restore_db.sh  restore_db_eve.sh  restore_db_mysql.sh  upgrade.sh
structure/: models.py
templates/: base.html  index.html  search_results.html  styles.html
tmp/: 2.diff  django.mo  django.po
(+2457 files in other folders)
