[metadata]
name = mezzanine-organization
version = attr: organization.__version__
description = mezzanine module for organizations with complex workflows
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Guillaume Pellerin
author_email = guillaume.pellerin@ircam.fr
url = https://www.ircam.fr
license = AGPL
license_file = LICENSE.txt
classifiers =
    Development Status :: 1.8 - Production/Stable
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: AGPL License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Framework :: Django
    Framework :: Django :: 2.1
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1
    Framework :: Django :: 3.2
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Internet :: WWW/HTTP :: WSGI
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >=3.6
packages = organization
include_package_data = true
install_requires =
    django >= 3.2, < 4.0
    mezzanine >= 4.3.1
    django-modeltranslation >= 0.17, < 0.18
    django-meta == 2.0
    django-bower == 5.2.0
    django-debug-toolbar == 3.2.1
    django-extensions == 2.2.5
    django-countries == 7.2.1
    django-querysetsequence == 0.12
    django-autocomplete-light == 3.8.2
    django-hijack == 3.0.0
    django-guardian == 2.4.0
    django-compat == 1.0.15
    django-auth-ldap == 1.2.17
    django-extra-views == 0.14.0
    django-extended-choices == 1.3
    django-taggit == 0.22.2
    djangorestframework >= 3.8.2
    django-allauth >= 0.41.0
    xlrd == 1.0.0
    pytz >= 2021.1
    pandas == 1.1.5
    xlwt == 1.2.0
    DateTimeRange == 0.2.8
    workalendar == 1.0.0
    bleach >= 2.1.3
    humanize
    ipython
    gitpython
    pygraphviz
    six
    

[options.extras_require]
testing =
    pytest-django >= 4, <5
    pytest-cov >= 2, < 3
    selenium == 3.11.0
    coverage>=5.1
codestyle =
    flake8 >= 3, <4
    black==20.8b1
    isort >= 5, <6
    pyupgrade >= 2, <3

# Building

[bdist_wheel]
universal = 1
